# stenography-cplusplus

./: CMakeLists.txt  main.cpp
include/steganography/: ISteganographer.h  SteganographerManager.h  Utils.h
include/steganography/bmp/: BmpSteganographer.h
include/steganography/cli/: Command.h  CommandErrors.h  CommandParser.h  CommandType.h  Shell.h
include/steganography/png/: PngSteganographer.h
include/steganography/ppm/: PpmSteganographer.h
src/steganography/: ISteganographer.cpp  SteganographerManager.cpp  Utils.cpp
src/steganography/bmp/: BmpSteganographer.cpp
src/steganography/cli/: CommandParser.cpp  Shell.cpp
src/steganography/png/: PngSteganographer.cpp
src/steganography/ppm/: PpmSteganographer.cpp
